# Gravity-and-N-Body-problem

./: .gitignore  README.md  environment.yml  pyproject.toml
notebooks/: Gravity.ipynb  N-body-problem.ipynb  Stardata.ipynb
src/gravity_nbody/: __init__.py  alpha_centauri.py  n_body_problem.py  physics_engine.py  stardata.py
